--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://03287c1a-98ee-4fb7-9886-5323a2b13c7a.preview.emergentagent.com
 WDS_SOCKET_PORT=443
